Made the menu buttons links <br> Applied style to remove underline from links.

--- a/css/style.css
+++ b/css/style.css
@@ -15,5 +15,10 @@
 
 #menu ul li {
     padding: 10px 10px;
+    
+}
+
+#menu ul li a {
+    text-decoration: none;
 }
 /* Styling the menu buttons ends here */
