Modified the html elements as well as applied background-color with css to the body.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     
 }
 
+body {
+    background-color: beige;
+}
+
 /* Stylng the menu buttons begins here */
 #menu ul {
     list-style-type: none;
